Added a random login form to test responsiveness of water CSS

--- a/index.html
+++ b/index.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css">
     <title>Primary Testing</title>
 </head>
+
 <body>
     <main>
         I use this for testing out stuff
+        <hr />
+
+        <form action="#">
+            <h2>Random Login Form</h2>
+
+            <div>
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+
+            <br>
+
+            <div>
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+
+            <br>
+
+            <button type="submit">Login</button>
+        </form>
+
+        <hr />
+
+        <!-- <iframe src="https://www.bloort.ai/embed?botId=2073e774-1e70-40e3-b159-d9cbac70fdad" width="100%" height="600"
+            style="border:none;"></iframe> -->
     </main>
 </body>
+
 </html>
